<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradient"
    tools:context=".create_pet">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="5dp"
        android:background="@android:color/holo_red_light"
        android:fontFamily="casual"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/finishButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/holo_green_dark"
        android:fontFamily="casual"
        android:text="@string/done"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_Create_Pet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/cancelButton"
        android:layout_toStartOf="@+id/finishButton"
        android:fontFamily="casual"
        android:text="@string/create_pet"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="10dp"
        android:background="#FFFFFF">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignEnd="@+id/edittext_birthdate"
                android:layout_alignStart="@+id/edittext_birthdate"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="40dp"
                android:hint="@string/hint_name"
                android:textColorHint="@android:color/black"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:background="@drawable/createpet_edittextbackground"/>


            <TextView
                android:id="@+id/edittext_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="110dp"
                android:paddingHorizontal="40dp"
                android:hint="@string/hint_birthdate"
                android:textColorHint="@android:color/black"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:background="@drawable/createpet_edittextbackground" />


            <Spinner
                android:id="@+id/spinnerSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignEnd="@+id/edittext_birthdate"
                android:layout_alignStart="@+id/edittext_birthdate"
                android:layout_marginTop="180dp"
                android:entries="@array/create_pet_sex"
                android:paddingHorizontal="40dp"
                android:spinnerMode="dialog"
                android:background="@drawable/createpet_edittextbackground"/>


            <NumberPicker
                android:id="@+id/numberpicker_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_toStartOf="@+id/blankspace"/>


            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/blankspace"
                android:layout_marginTop="250dp"
                />


            <NumberPicker
                android:id="@+id/numberpicker_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_toEndOf="@+id/blankspace"/>


        </RelativeLayout>


    </ScrollView>


    <!-- view build.gradle for needed dependency -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pet_imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#000000"
        android:src="@drawable/clicktoaddphoto" />


</RelativeLayout>